
Version 2.2.3 - SVN
-------------------
 - Fix bug in lib.misc.c where a failed execvp would not correctly abort.
 - Merge team manual content improvements from trunk revisions:
   2442 (partial), 2445, 2446, 2453. (Closes: #2153189)
 - Merge judge,admin manual improvements from trunk r2454-2457.
 - Fix error in XML validation schema.
 - Set User-Agent in submit commandline client.

Version 2.2.2 - 8 October 2008
------------------------------
 - Delete testcases when a problem is deleted. (Closes: #2144325)
 - Fix for Apache config generation when installing into webroot.
 - Use db values instead of the userinput to canonicalise
   any IDs. Solves an issue with blank cells in the scoreboard.
   (Closes #2144718)
 - Add a FLUSH PRIVILEGES statement after user grants during
   installation, as this may be necessary to have MySQL pick up
   all changes correctly.
 - Don't use -fstack-protector under Cygwin. (Closes: #2144713)
 - Add check for colourless problems.

Version 2.2.1 - 31 August 2008
------------------------------
 - Add missing link for adding testcases to a new problem.
 - Fix bug causing segfaults of submitdaemon. (Closes: #2046031)
 - Update shipped example data for new functionality.
 - Various documentation updates including revised team manual.

Version 2.2.0 - 11 August 2008
------------------------------
 - Do not install domjudge straight in $HOME by default.
 - [security] Add sanity check in jury interface whether basic authentication
   is enabled, and lock down jury inferface also for non-GET/POST requests
 - Fix race condition in team password check.
 - Improved MySQL query performance.
 - Move .htaccess config to apache config.
 - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
 - Moved beep system call to separate function in lib.misc.{c,php}.
 - Switch to UTF-8 for output. (Closes: #1742460)
 - Represent balloon colours with a symbol rather than filling the background,