@@ -8,6 +8,7 @@ Version 2.2.3 - SVN
  - Merge judge,admin manual improvements from trunk r2454-2457.
  - Fix error in XML validation schema.
  - Set User-Agent in submit commandline client.
+ - Add necessary privileges for plugin DB user and cid field in XML output.
 
 Version 2.2.2 - 8 October 2008
 ------------------------------
